--- a/gotech_questionnaire/android/app/src/main/AndroidManifest.xml
+++ b/gotech_questionnaire/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gotech_questionnaire">
+   <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="gotech_questionnaire"
         android:name="${applicationName}"
